# ship-motion-sim

./: .gitignore  CMakeLists.txt  README.md  architecture.md  draft.md  final.md  pahse-2-final.md  parameter_explanation.md  phase-2-draft.md
config/: default_config.json  default_config.xml  sample_commands.csv  three_minute_commands copy.csv  three_minute_commands.csv  three_minute_config.json  three_minute_config.xml
scripts/: plot_simulation.py
specs/003-simplify-branch/: draft.md  final.md
src/: gui_main.cpp  main.cpp
src/app/: batch_simulation_runner.cpp  batch_simulation_runner.h  plot_runner.cpp  plot_runner.h  realtime_simulation_controller.cpp  realtime_simulation_controller.h  simulation_app.cpp  simulation_app.h  simulation_session.cpp  simulation_session.h
src/common/: math_utils.h  simple_json.cpp  simple_json.h  types.h
src/config/: config_loader.cpp  config_loader.h  xml_config_loader.cpp  xml_config_loader.h
src/gui/: main_window.cpp  main_window.h  track_view_widget.cpp  track_view_widget.h
src/logger/: state_logger.cpp  state_logger.h
src/model/: simple_nomoto_ship_model.cpp  simple_nomoto_ship_model.h
src/res/: app_resources.qrc  main_window.qss
src/scenario/: command_schedule.cpp  command_schedule.h  csv_command_io.cpp  csv_command_io.h
tasks/: lessons.md  todo-1-nomoto-low-speed.md  todo-2-sync-main.md  todo.md
tests/: test_main.cpp
tests/baselines/: baseline_straight_expected.csv  baseline_turn_expected.csv
tests/fixtures/: baseline_straight_commands.csv  baseline_straight_config.json  baseline_straight_config.xml  baseline_turn_commands.csv  baseline_turn_config.json  baseline_turn_config.xml
